Misc code clean-up.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@992895 13f79535-47bb-0310-9956-ffa450edef68